[project]
name = "emerald-killfeed-bot"
version = "2.7.0"
description = "Emerald's Killfeed Discord Bot for Deadside PvP Engine"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncssh>=2.21.0",
    "boto3>=1.38.30",
    "discord-py>=2.5.2",
    "flask>=3.1.1",
    "motor>=3.7.1",
    "py-cord==2.6.1",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["assets/*"]
